--- a/README.rdoc
+++ b/README.rdoc
@@ -53,3 +53,8 @@ repo_watch number. I download repo information by Github API, a repo have many i
 collaborators information, this information is also very important, it is used in directory repos/
 
 Without these extra data, I can only get 2600 by the data github provide. So, extra data is important in the contest.
+
+=== Blending
+The most important lesson I learn from Netflix Prize is one algo can not slove everything. In this way, we can get better result by blending algos I used above. I used a simple linear blending method, a divide users into 3 groups by the number of repos they watched. In every group, I use SA to learn the linear blending weight of different algos and get the best blending weight. Then, I reset these weight by submission. Github contest allow a competitor to sumbit many results every day, so the best blending weight can be learning by submission, therefore, the best result is overfitting in test set.
+
+However, if I only using the blending weight got from SA, I can only get 253x in test set. So, I think jeremybarnes did a good job in github contest.
